--- a/concepts/frame-canvas.html
+++ b/concepts/frame-canvas.html
@@ -56,18 +56,11 @@
                 <div class="w-full">
                   <ul class="nav-list">
                     <li class="level1 nav-node"><a href="../">Doodle</a></li>
-                    <li class="level2 nav-node"><a href="index.html">Core Concepts</a></li>
-                    <li class="level3 nav-leaf"><a href="principles.html">Principles</a></li>
-                    <li class="level3 nav-leaf"><a href="algebras.html">Algebras</a></li>
-                    <li class="level3 nav-leaf"><a href="drawing-picture.html">Picture and Drawing</a></li>
-                    <li class="level3 nav-leaf"><a href="picture-object.html">Picture Object</a></li>
-                    <li class="level3 nav-leaf"><a href="syntax.html">Syntax</a></li>
-                    <li class="level3 active nav-leaf"><a href="#">Frame and Canvas</a></li>
-                    <li class="level3 nav-leaf"><a href="effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="../pictures/">Creating Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/picture-image.html">Picture and Image</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/shape.html">Shapes</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/path.html">Paths</a></li>
+                    <li class="level3 nav-leaf"><a href="../pictures/bitmap.html">Bitmaps</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/layout.html">Layout</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
@@ -76,18 +69,25 @@
                     <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
-                    <li class="level2 nav-node"><a href="../core/">Core</a></li>
-                    <li class="level3 nav-leaf"><a href="../core/geometry.html">Geometry</a></li>
-                    <li class="level3 nav-leaf"><a href="../core/color.html">Color and Gradients</a></li>
+                    <li class="level2 nav-node"><a href="index.html">Core Concepts</a></li>
+                    <li class="level3 nav-leaf"><a href="principles.html">Principles</a></li>
+                    <li class="level3 nav-leaf"><a href="algebras.html">Algebras</a></li>
+                    <li class="level3 nav-leaf"><a href="drawing-picture.html">Picture and Drawing</a></li>
+                    <li class="level3 nav-leaf"><a href="picture-object.html">Picture Object</a></li>
+                    <li class="level3 nav-leaf"><a href="syntax.html">Syntax</a></li>
+                    <li class="level3 active nav-leaf"><a href="#">Frame and Canvas</a></li>
+                    <li class="level3 nav-leaf"><a href="effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="../interact/">Interactivity</a></li>
                     <li class="level3 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
                     <li class="level3 nav-leaf"><a href="../interact/examples.html">Examples</a></li>
-                    <li class="level2 nav-node"><a href="../algebra/">Algebras</a></li>
-                    <li class="level3 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
-                    <li class="level3 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
-                    <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
-                    <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
-                    <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
+                    <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/geometry.html">Geometry</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/color.html">Color and Gradients</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/effect.html">Effects</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/picture.html">Picture</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
+                    <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
@@ -122,18 +122,11 @@
         <div class="max-h-[calc(100vh-6rem)] overflow-y-auto">
           <ul class="nav-list">
             <li class="level1 nav-node"><a href="../">Doodle</a></li>
-            <li class="level2 nav-node"><a href="index.html">Core Concepts</a></li>
-            <li class="level3 nav-leaf"><a href="principles.html">Principles</a></li>
-            <li class="level3 nav-leaf"><a href="algebras.html">Algebras</a></li>
-            <li class="level3 nav-leaf"><a href="drawing-picture.html">Picture and Drawing</a></li>
-            <li class="level3 nav-leaf"><a href="picture-object.html">Picture Object</a></li>
-            <li class="level3 nav-leaf"><a href="syntax.html">Syntax</a></li>
-            <li class="level3 active nav-leaf"><a href="#">Frame and Canvas</a></li>
-            <li class="level3 nav-leaf"><a href="effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="../pictures/">Creating Pictures</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/picture-image.html">Picture and Image</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/shape.html">Shapes</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/path.html">Paths</a></li>
+            <li class="level3 nav-leaf"><a href="../pictures/bitmap.html">Bitmaps</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/layout.html">Layout</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
@@ -142,18 +135,25 @@
             <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
-            <li class="level2 nav-node"><a href="../core/">Core</a></li>
-            <li class="level3 nav-leaf"><a href="../core/geometry.html">Geometry</a></li>
-            <li class="level3 nav-leaf"><a href="../core/color.html">Color and Gradients</a></li>
+            <li class="level2 nav-node"><a href="index.html">Core Concepts</a></li>
+            <li class="level3 nav-leaf"><a href="principles.html">Principles</a></li>
+            <li class="level3 nav-leaf"><a href="algebras.html">Algebras</a></li>
+            <li class="level3 nav-leaf"><a href="drawing-picture.html">Picture and Drawing</a></li>
+            <li class="level3 nav-leaf"><a href="picture-object.html">Picture Object</a></li>
+            <li class="level3 nav-leaf"><a href="syntax.html">Syntax</a></li>
+            <li class="level3 active nav-leaf"><a href="#">Frame and Canvas</a></li>
+            <li class="level3 nav-leaf"><a href="effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="../interact/">Interactivity</a></li>
             <li class="level3 nav-leaf"><a href="../interact/animation.html">Animations</a></li>
             <li class="level3 nav-leaf"><a href="../interact/examples.html">Examples</a></li>
-            <li class="level2 nav-node"><a href="../algebra/">Algebras</a></li>
-            <li class="level3 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
-            <li class="level3 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
-            <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
-            <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
-            <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
+            <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/geometry.html">Geometry</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/color.html">Color and Gradients</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/effect.html">Effects</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/picture.html">Picture</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
+            <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
+            <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
