--- a/interact/index.html
+++ b/interact/index.html
@@ -56,18 +56,11 @@
                 <div class="w-full">
                   <ul class="nav-list">
                     <li class="level1 nav-node"><a href="../">Doodle</a></li>
-                    <li class="level2 nav-node"><a href="../concepts/">Core Concepts</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/principles.html">Principles</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/algebras.html">Algebras</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/drawing-picture.html">Picture and Drawing</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/picture-object.html">Picture Object</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/syntax.html">Syntax</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
-                    <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
                     <li class="level2 nav-node"><a href="../pictures/">Creating Pictures</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/picture-image.html">Picture and Image</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/shape.html">Shapes</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/path.html">Paths</a></li>
+                    <li class="level3 nav-leaf"><a href="../pictures/bitmap.html">Bitmaps</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/layout.html">Layout</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
@@ -76,18 +69,25 @@
                     <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
                     <li class="level3 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
-                    <li class="level2 nav-node"><a href="../core/">Core</a></li>
-                    <li class="level3 nav-leaf"><a href="../core/geometry.html">Geometry</a></li>
-                    <li class="level3 nav-leaf"><a href="../core/color.html">Color and Gradients</a></li>
+                    <li class="level2 nav-node"><a href="../concepts/">Core Concepts</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/principles.html">Principles</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/algebras.html">Algebras</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/drawing-picture.html">Picture and Drawing</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/picture-object.html">Picture Object</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/syntax.html">Syntax</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+                    <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
                     <li class="level2 active nav-node"><a href="#">Interactivity</a></li>
                     <li class="level3 nav-leaf"><a href="animation.html">Animations</a></li>
                     <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
-                    <li class="level2 nav-node"><a href="../algebra/">Algebras</a></li>
-                    <li class="level3 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
-                    <li class="level3 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
-                    <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
-                    <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
-                    <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
+                    <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/geometry.html">Geometry</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/color.html">Color and Gradients</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/effect.html">Effects</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/picture.html">Picture</a></li>
+                    <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
+                    <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
+                    <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
                     <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
                     <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
@@ -122,18 +122,11 @@
         <div class="max-h-[calc(100vh-6rem)] overflow-y-auto">
           <ul class="nav-list">
             <li class="level1 nav-node"><a href="../">Doodle</a></li>
-            <li class="level2 nav-node"><a href="../concepts/">Core Concepts</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/principles.html">Principles</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/algebras.html">Algebras</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/drawing-picture.html">Picture and Drawing</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/picture-object.html">Picture Object</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/syntax.html">Syntax</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
-            <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
             <li class="level2 nav-node"><a href="../pictures/">Creating Pictures</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/picture-image.html">Picture and Image</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/shape.html">Shapes</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/path.html">Paths</a></li>
+            <li class="level3 nav-leaf"><a href="../pictures/bitmap.html">Bitmaps</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/layout.html">Layout</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/style.html">Style</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/transform.html">Transforms</a></li>
@@ -142,18 +135,25 @@
             <li class="level3 nav-leaf"><a href="../pictures/text.html">Text</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/drawing.html">Drawing to the Screen</a></li>
             <li class="level3 nav-leaf"><a href="../pictures/writing.html">Writing to a File</a></li>
-            <li class="level2 nav-node"><a href="../core/">Core</a></li>
-            <li class="level3 nav-leaf"><a href="../core/geometry.html">Geometry</a></li>
-            <li class="level3 nav-leaf"><a href="../core/color.html">Color and Gradients</a></li>
+            <li class="level2 nav-node"><a href="../concepts/">Core Concepts</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/principles.html">Principles</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/algebras.html">Algebras</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/drawing-picture.html">Picture and Drawing</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/picture-object.html">Picture Object</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/syntax.html">Syntax</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/frame-canvas.html">Frame and Canvas</a></li>
+            <li class="level3 nav-leaf"><a href="../concepts/effects.html">Effects</a></li>
             <li class="level2 active nav-node"><a href="#">Interactivity</a></li>
             <li class="level3 nav-leaf"><a href="animation.html">Animations</a></li>
             <li class="level3 nav-leaf"><a href="examples.html">Examples</a></li>
-            <li class="level2 nav-node"><a href="../algebra/">Algebras</a></li>
-            <li class="level3 nav-leaf"><a href="../algebra/using.html">Using Algebras</a></li>
-            <li class="level3 nav-leaf"><a href="../algebra/picture.html">Picture</a></li>
-            <li class="level3 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
-            <li class="level2 nav-leaf"><a href="../effect/">Effects</a></li>
-            <li class="level2 nav-leaf"><a href="../java2d/">Java2D Backend</a></li>
+            <li class="level2 nav-node"><a href="../reference/">Reference</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/geometry.html">Geometry</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/color.html">Color and Gradients</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/effect.html">Effects</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/picture.html">Picture</a></li>
+            <li class="level3 nav-leaf"><a href="../reference/using.html">Using Algebras</a></li>
+            <li class="level2 nav-node"><a href="../java2d/">Java2D Backend</a></li>
+            <li class="level3 nav-leaf"><a href="../java2d/bitmap.html">Bitmaps in Java2D</a></li>
             <li class="level2 nav-node"><a href="../svg/">SVG Backend</a></li>
             <li class="level3 nav-leaf"><a href="../svg/bitmap.html">Bitmaps in SVG</a></li>
             <li class="level3 nav-leaf"><a href="../svg/examples.html">Examples</a></li>
@@ -176,7 +176,7 @@
           <div id="content"><h1 id="interactivity" class="title">Interactivity</h1>
 <p>Doodle supports animations that react to user inputs such as mouse clicks. This chapter describes these features. It begins with the tools provided for creating animations, and then discusses how to add interactivity into them.</p></div>
           <div class="flex flex-row justify-between">
-            <a class="pagenav" href="../core/color.html">←Color and Gradients</a> <a class="pagenav" href="animation.html">Animations→</a>
+            <a class="pagenav" href="../concepts/effects.html">←Effects</a> <a class="pagenav" href="animation.html">Animations→</a>
           </div>
         </div>
         <footer>
